--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-HoNCore - A Python library providing an easy interface to the HoN chat and master servers.
+HoNCore - A Python library providing a framework for communicating with the HoN chat and master servers.
 
 Some information in the DOCUMENTATION file.
